[FIX] invalid jquery ajax method description

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript">
 	$(document).ready(function () {
 		$("#example1,#example2,#example3").ajaxChosen({
-			method: 'GET',
+			type: 'GET',
 			url: '/ajax-chosen/data.php',
 			dataType: 'json'
 		}, function (data) {
